--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,12 @@ footer {
 
 .chapter {
   font-size: 2em;
+  line-height: 200%;
 }
 
 .section {
   font-size: 1.5em;
+  line-height: 150%;
 }
 
 @media (max-width: 1000px) {
