--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,12 @@ footer {
   width: 100%;
 }
 
-.chapter {
+.chapter-heading {
   font-size: 2em;
   line-height: 200%;
 }
 
-.section {
+.section-heading {
   font-size: 1.5em;
   line-height: 150%;
 }
